Change list kafka to cluster

--- a/docker/alpine-nginx-http-log-json/nginx.conf
+++ b/docker/alpine-nginx-http-log-json/nginx.conf
@@ -48,8 +48,7 @@ http {
         }
     }
 
-    json_log_kafka_brokers kafka:9092 kafka2:9092;
-    json_log_kafka_brokers kafka2:9092 kafka:9092;
+    json_log_kafka_brokers kafka:9092,kafka2:9092,kafka3:9092;
     # another virtual host using mix of IP-, name-, and port-based configuration
     #
     #server {
