--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,20 @@ services:
         hostname: zookeeper
         container_name: nginx-json-zookeeper
         image: wurstmeister/zookeeper
+        environment:
+          ZOOKEEPER_SERVER_ID: 1
+    zookeeper2:
+        hostname: zookeeper2
+        container_name: nginx-json-zookeeper2
+        image: wurstmeister/zookeeper
+        environment:
+          ZOOKEEPER_SERVER_ID: 2
+    zookeeper3:
+        hostname: zookeeper3
+        container_name: nginx-json-zookeeper3
+        image: wurstmeister/zookeeper
+        environment:
+          ZOOKEEPER_SERVER_ID: 3
 
     kafka:
         hostname: kafka
@@ -12,26 +26,39 @@ services:
         image: wurstmeister/kafka
         depends_on:
           - zookeeper
+          - zookeeper2
+          - zookeeper3
         environment:
+          KAFKA_BROKER_ID: 1
           KAFKA_ADVERTISED_HOST_NAME: "kafka"
           KAFKA_ADVERTISED_PORT: "9092"
-          KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-
-    zookeeper2:
-        hostname: zookeeper2
-        container_name: nginx-json-zookeeper2
-        image: wurstmeister/zookeeper
-
+          KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181,zookeeper2:2181,zookeeper3:2181
     kafka2:
         hostname: kafka2
         container_name: nginx-json-kafka2
         image: wurstmeister/kafka
         depends_on:
+          - zookeeper
           - zookeeper2
+          - zookeeper3
         environment:
+          KAFKA_BROKER_ID: 2
           KAFKA_ADVERTISED_HOST_NAME: "kafka2"
           KAFKA_ADVERTISED_PORT: "9092"
-          KAFKA_ZOOKEEPER_CONNECT: zookeeper2:2181
+          KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181,zookeeper2:2181,zookeeper3:2181'
+    kafka3:
+        hostname: kafka3
+        container_name: nginx-json-kafka3
+        image: wurstmeister/kafka
+        depends_on:
+          - zookeeper
+          - zookeeper2
+          - zookeeper3
+        environment:
+          KAFKA_BROKER_ID: 3
+          KAFKA_ADVERTISED_HOST_NAME: "kafka3"
+          KAFKA_ADVERTISED_PORT: "9092"
+          KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181,zookeeper2:2181,zookeeper3:2181'
 
     nginx:
         image: nginx-json-log:latest
@@ -49,6 +76,3 @@ services:
         - 8080:8080
       environment:
         DYNAMIC_CONFIG_ENABLED: 'true'
-      depends_on:
-        - kafka
-        - kafka2
