--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,78 +1,80 @@
 version: '3'
-
 services:
-    zookeeper:
-        hostname: zookeeper
-        container_name: nginx-json-zookeeper
-        image: wurstmeister/zookeeper
-        environment:
-          ZOOKEEPER_SERVER_ID: 1
-    zookeeper2:
-        hostname: zookeeper2
-        container_name: nginx-json-zookeeper2
-        image: wurstmeister/zookeeper
-        environment:
-          ZOOKEEPER_SERVER_ID: 2
-    zookeeper3:
-        hostname: zookeeper3
-        container_name: nginx-json-zookeeper3
-        image: wurstmeister/zookeeper
-        environment:
-          ZOOKEEPER_SERVER_ID: 3
+  zookeeper-1:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: zookeeper-1
+    environment:
+      ZOOKEEPER_SERVER_ID: 1
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "22181:2181"
 
-    kafka:
-        hostname: kafka
-        container_name: nginx-json-kafka
-        image: wurstmeister/kafka
-        depends_on:
-          - zookeeper
-          - zookeeper2
-          - zookeeper3
-        environment:
-          KAFKA_BROKER_ID: 1
-          KAFKA_ADVERTISED_HOST_NAME: "kafka"
-          KAFKA_ADVERTISED_PORT: "9092"
-          KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181,zookeeper2:2181,zookeeper3:2181
-    kafka2:
-        hostname: kafka2
-        container_name: nginx-json-kafka2
-        image: wurstmeister/kafka
-        depends_on:
-          - zookeeper
-          - zookeeper2
-          - zookeeper3
-        environment:
-          KAFKA_BROKER_ID: 2
-          KAFKA_ADVERTISED_HOST_NAME: "kafka2"
-          KAFKA_ADVERTISED_PORT: "9092"
-          KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181,zookeeper2:2181,zookeeper3:2181'
-    kafka3:
-        hostname: kafka3
-        container_name: nginx-json-kafka3
-        image: wurstmeister/kafka
-        depends_on:
-          - zookeeper
-          - zookeeper2
-          - zookeeper3
-        environment:
-          KAFKA_BROKER_ID: 3
-          KAFKA_ADVERTISED_HOST_NAME: "kafka3"
-          KAFKA_ADVERTISED_PORT: "9092"
-          KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181,zookeeper2:2181,zookeeper3:2181'
+  zookeeper-2:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: zookeeper-2
+    environment:
+      ZOOKEEPER_SERVER_ID: 2
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "32181:2181"
 
-    nginx:
-        image: nginx-json-log:latest
-        build: ./alpine-nginx-http-log-json
-        container_name: nginx-json
-        ports:
-          - 80:80
-        volumes:
-          - ./alpine-nginx-http-log-json/nginx.conf:/usr/local/nginx/conf/nginx.conf:ro
-          
-    kafka-ui:
-      container_name: kafka-ui
-      image: provectuslabs/kafka-ui:latest
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka
+    depends_on:
+      - zookeeper-1
+      - zookeeper-2
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper-1:2181,zookeeper-2:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:19092
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+
+  kafka2:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka2
+    depends_on:
+      - zookeeper-1
+      - zookeeper-2
+    environment:
+      KAFKA_BROKER_ID: 2
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper-1:2181,zookeeper-2:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka2:9093
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+
+  kafka3:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka3
+    depends_on:
+      - zookeeper-1
+      - zookeeper-2
+    environment:
+      KAFKA_BROKER_ID: 3
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper-1:2181,zookeeper-2:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka3:9094
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+
+  nginx:
+      image: nginx-json-log:latest
+      build: ./alpine-nginx-http-log-json
+      container_name: nginx-json
       ports:
-        - 8080:8080
-      environment:
-        DYNAMIC_CONFIG_ENABLED: 'true'
+        - 80:80
+      volumes:
+        - ./alpine-nginx-http-log-json/nginx.conf:/usr/local/nginx/conf/nginx.conf:ro
+        
+  kafka-ui:
+    container_name: kafka-ui
+    image: provectuslabs/kafka-ui:latest
+    ports:
+      - 8080:8080
+    environment:
+      DYNAMIC_CONFIG_ENABLED: 'true'
